# AVS

./: CMakeLists.txt  README.md  cabinet.cpp  cabinet.h  circle.cpp  circle.h  circle.py  container.cpp  container.h  container.py  extender.py  main.cpp  main.py  output.txt  readStrArray.py  rectangle.cpp  rectangle.h  rectangle.py  rnd.h  shape.cpp  shape.h  shape.py  triangle.cpp  triangle.h  triangle.py  Дмитрин_Отчет1.docx  Отчет по заданию.docx  Отчет_Дмитрин_2.docx  Отчет_Дмитрин_2_updated.docx
tests/: test01.txt  test02.txt  test03.txt  test04.txt
